# coffee

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  serve_docs.sh
.github/workflows/: docs.yml
coffee/: config.py
coffee/app/: __init__.py  app.py  db.py  page.py  pages.md
coffee/io/: encoder.py  lcd.py  multiplex.py
coffee/io/scale/: hx711.py  scale.py
docs/: index.md
docs/api/: app.md  config.md  io.md
docs/architecture/: application.md  components.md  data-flow.md  overview.md
docs/getting-started/: hardware-setup.md  installation.md  quick-start.md
docs/setup/: hardware-setup.md  installation.md
docs/user-guide/: calibration.md  interface.md  pages.md  principles.md  troubleshooting.md  workflow.md
scripts/: app.py  app_data.db  calibrate.py  main.py  main_encoder.py  scale_min.py  scale_thread.py  test.py
scripts/inputs/: encoder.py  multiplex.py
scripts/scale/: example.py  scale.py
scripts/systemd/: README.md  coffee.service  restart.sh
scripts/templates/: index.html
scripts/ui/: app.py  config.py  db.py  lcd.py  page.py
