[project]
name = "coffee"
version = "0.1.0"
description = "Gestion d'une machine à café avec interface utilisateur, gestion de la balance, encodeur, et LCD."
authors = [
    {name = "Thomas Petit-Jean", email = "thom.petitjean@hotmail.fr" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
	"python_lcd @ git+https://github.com/dhylands/python_lcd.git",
    "gpiozero",
    "mcp23017",
    "RPi.GPIO",
    "wrapt",
    "hx711-rpi-py"
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.20.0",
]

[tool.setuptools]
packages = ["coffee"]

